--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="icon" href="img/delete.png" type="image/x-icon">
     <link rel="icon" href="img/reload.png" type="image/x-icon">
     <link rel="icon" href="img/book.png" type="image/x-icon">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -43,7 +45,7 @@
                         <label>Finished Reading</label>
                         <input class="textbox" id="bookIsComplete" type="checkbox">
                     </div><br>
-                    <button id="submit" value="submit" name="submit" type="submit">Put Book</button><br>
+                    <button id="submit" value="submit" name="submit" type="submit"><i class="fa-solid fa-book"></i> Put Book</button><br>
                 </form>
             </section>
 
@@ -53,7 +55,7 @@
                     <div>
                         <label>Title</label><br>
                         <input class="textbox" id="searchBookTitle" type="text"><br>
-                        <button id="searchSubmit" type="submit">Search</button>
+                        <button id="searchSubmit" type="submit"><i class="fa-solid fa-magnifying-glass"></i> Search</button>
                     </div>
                 </form>
             </section>
