--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -45,7 +46,8 @@
                         <label>Finished Reading</label>
                         <input class="textbox" id="bookIsComplete" type="checkbox">
                     </div><br>
-                    <button id="submit" value="submit" name="submit" type="submit"><i class="fa-solid fa-book"></i> Put Book</button><br>
+                    <button id="submit" value="submit" name="submit" type="submit"><i class="fa-solid fa-book"></i> Put
+                        Book</button><br>
                 </form>
             </section>
 
@@ -55,11 +57,33 @@
                     <div>
                         <label>Title</label><br>
                         <input class="textbox" id="searchBookTitle" type="text"><br>
-                        <button id="searchSubmit" type="submit"><i class="fa-solid fa-magnifying-glass"></i> Search</button>
+                        <button id="searchSubmit" type="submit"><i class="fa-solid fa-magnifying-glass"></i>
+                            Search</button>
                     </div>
                 </form>
             </section>
         </div>
+
+        <section>
+            <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="confirmationModalLabel">Confirmation Delete Book</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure delete this book?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" id="confirmDeleteButton" class="btn btn-danger">Delete</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <div class="book">
             <section id="before" class="book-box">
@@ -86,6 +110,8 @@
         </div>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
 
 </body>
