--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h1>Bookshelf Apps</h1>
     </header>
     <main>
+
         <div class="top">
             <section class="form">
                 <h2>Insert Book</h2>
@@ -64,6 +65,21 @@
             </section>
         </div>
 
+        <div class="book">
+            <section id="before" class="book-box">
+                <h2>Not Finished Reading</h2>
+                <div id="uncompletedRead" class="list-book">
+                    <!-- books content -->
+                </div>
+            </section>
+            <section id="after" class="book-box">
+                <h2>Finished Reading</h2>
+                <div id="completedRead" class="list-book">
+                    <!-- books content  -->
+                </div>
+            </section>
+        </div>
+
         <section>
             <div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
                 aria-hidden="true">
@@ -85,23 +101,8 @@
             </div>
         </section>
 
-        <div class="book">
-            <section id="before" class="book-box">
-                <h2>Not Finished Reading</h2>
-                <div id="uncompletedRead" class="list-book">
-
-                </div>
-            </section>
-
-            <section id="after" class="book-box">
-                <h2>Finished Reading</h2>
-                <div id="completedRead" class="list-book">
-
-                </div>
-            </section>
-        </div>
-
     </main>
+
     <footer>
         <div class="foot">
             <h6>
