--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     </div>
                     <div class="input">
                         <label>Author</label>
-                        <input class="textbox" id="bookAuthor" type="text" required data-testid="bookFormAuthorInput"><br>
+                        <input class="textbox" id="bookAuthor" type="text" required
+                            data-testid="bookFormAuthorInput"><br>
                     </div>
                     <div class="input">
                         <label>Year</label>
@@ -45,9 +46,11 @@
                     </div>
                     <div class="input-check">
                         <label>Finished Reading</label>
-                        <input class="textbox" id="bookIsComplete" type="checkbox" data-testid="bookFormIsCompleteCheckbox">
+                        <input class="textbox" id="bookIsComplete" type="checkbox"
+                            data-testid="bookFormIsCompleteCheckbox">
                     </div><br>
-                    <button id="submit" value="submit" name="submit" type="submit"><i class="fa-solid fa-book" data-testid="bookFormSubmitButton"></i> Put
+                    <button id="submit" value="submit" name="submit" type="submit"><i class="fa-solid fa-book"
+                            data-testid="bookFormSubmitButton"></i> Put
                         Book</button><br>
                 </form>
             </section>
@@ -57,8 +60,10 @@
                 <form id="searchBook" data-testid="searchBookForm">
                     <div>
                         <label>Title</label><br>
-                        <input class="textbox" id="searchBookTitle" type="text" data-testid="searchBookFormTitleInput"><br>
-                        <button id="searchSubmit" type="submit"><i class="fa-solid fa-magnifying-glass" data-testid="searchBookFormSubmitButton"></i>
+                        <input class="textbox" id="searchBookTitle" type="text"
+                            data-testid="searchBookFormTitleInput"><br>
+                        <button id="searchSubmit" type="submit"><i class="fa-solid fa-magnifying-glass"
+                                data-testid="searchBookFormSubmitButton"></i>
                             Search</button>
                     </div>
                 </form>
