--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <input class="textbox" id="bookIsComplete" type="checkbox"
                             data-testid="bookFormIsCompleteCheckbox">
                     </div><br>
-                    <button id="submit" value="submit" name="submit" type="submit"><i class="fa-solid fa-book"
-                            data-testid="bookFormSubmitButton"></i> Put
+                    <button id="submit" value="submit" name="submit" type="submit" 
+                            data-testid="bookFormSubmitButton"><i class="fa-solid fa-book"></i> Put
                         Book</button><br>
                 </form>
             </section>
@@ -62,8 +62,8 @@
                         <label>Title</label><br>
                         <input class="textbox" id="searchBookTitle" type="text"
                             data-testid="searchBookFormTitleInput"><br>
-                        <button id="searchSubmit" type="submit"><i class="fa-solid fa-magnifying-glass"
-                                data-testid="searchBookFormSubmitButton"></i>
+                        <button id="searchSubmit" type="submit" 
+                                data-testid="searchBookFormSubmitButton"><i class="fa-solid fa-magnifying-glass"></i>
                             Search</button>
                     </div>
                 </form>
